Update documentation with Quick Start guide and Git features